Changed new files

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
     <script src="vega_lite_vis.js"></script>
 
-    <title>First vega-lite graph </title>
 </head>
 
 <body>
+    <h1>First vega-lite graph </h1>
+
     <div id="map">
     </div>
+
 </body>
 
 </html>
