--- a/index.html
+++ b/index.html
@@ -5,29 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Vega packages -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
     <script src="vega_lite_vis.js"></script>
 
+    <style>
+        h1{
+            text-align: center;
+        }
+
+        h2{
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="map">
+
+    <!-- Title Grid -->
+    <div class="pure-g">
+        <div class="pure-u-1-1">
+            <h1>Crimes and Prisoners in the U.S.A</h1>
+        </div>
     </div>
 
-    <div id="DoC">
+
+    <!-- Chloropleth and Heatmap Grid-->
+    <div class = "pure-g">
+        <div class="pure-u-1-1">
+            <h2>Prisoner Count and Quantity of Crimes per state</h2>
+        </div>
+        <div class="pure-u-1-2">
+            <div id="map">
+            </div>
+        
+            <div id="heatmap">
+            </div>
+        </div>
+    </div>>
+
+    <!-- Bar Charts-->
+    <div class = "pure-g">
+        <div class="pure-u-1-1">
+            <h2>Division of Crimes and Conviction Rate</h2>
+        </div>
+        <div class="pure-u-1-2">
+            <div class="pure-u-2-1">
+                <div id="DoC">
+                </div>
+            
+                <div id="CvP">
+                </div>
+            </div>
+            <div class="pure-u-1-1"><p>penis</p></div>>
+        </div>
     </div>
 
-    <div id="CvP">
-    </div>
+    <!-- Scatter Plot-->
+    <div class = "pure-g">
+        <div class="pure-u-1-1">
+            <h2>Crimes and Prisoners</h2>
+        </div>
+        <div class="pure-u-1-2">
+            <div id="scatterplot">
+            </div>
+        </div>
+    </div>>
 
-    <div id="heatmap">
-    </div>
 
-    <div id="scatterplot">
-    </div>
 </body>
 
 </html>
