--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
             background-color: white;
         
         }
-        
-        .analysis{
-            margin-top:0;
-        }
-
-        .right_analysis {
-            padding-left: 20;
-            padding-top: 60;
-        }
     </style>
 </head>
 
@@ -77,7 +68,7 @@
                     </div>
                 </div>
                 <div class="pure-u-1-2">
-                    <div class="analysis right_analysis">
+                    <div>
                         <p>Enter analysis here</p>
                     </div>
                 </div>
