--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!-- Title Grid -->
             <div class="pure-g">
                 <div class="pure-u-1-1">
-                    <h1>Crimes and Prisoners in the U.S.A</h1>
+                    <h1>Crimes and Prisoners in the U.S.A (2016)</h1>
                 </div>
             </div>
 
