removed small text error

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <span style = "font-weight:bold; color:orange">98,010</span> prisoners in holding.
                     </p>
                 </div>
-            </div>>
+            </div>
         </div>
     </div>
 </body>
